fix: adjust header styles for improved layout on mobile

--- a/style.css
+++ b/style.css
@@ -705,6 +705,13 @@ footer.scroll {
 }
 
 @media (max-width: 800px) {
+  header {
+    height: 1px;
+    min-height: 0;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+  }
   /* Adjust header spacing */
   h1 {
     margin-bottom: 0px; /* Reduce space below heading */
